...
    android:layout_height="match_parent"
    tools:context=".activity.scheduleDetail.ScheduleDetailActivity"
    android:paddingBottom="16dp">


    <ImageView
        android:id="@+id/ivHome"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/tvHomeName"
        app:layout_constraintEnd_toStartOf="@+id/tvVs"
        app:layout_constraintStart_toStartOf="parent"
...
        android:text="away"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvVs"
        app:layout_constraintTop_toTopOf="@+id/tvVs" />

    <ImageView
        android:id="@+id/ivAway"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/tvAwayName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvVs"
...
